objects/Log_Settings__c.object
<CustomObject>
    <fields>
        <fullName>Debug__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Info__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Log_Retention_c__c</fullName>
        <label>Log Retention (Days)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warning__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Warning</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>